<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario: " />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo: " />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total de productos: " />

    <android.support.v7.widget.GridLayout
        app:columnCount="3"
        app:rowCount="3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="@dimen/medium_gap">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/medium_gap"
            android:layout_marginBottom="@dimen/medium_gap"
            android:background="@color/background_color_red"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_1"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/medium_gap"
            android:background="@color/background_color_aqua"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_2"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_color_blue"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_3"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_gap"
            android:background="@color/background_color_cyan"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_4"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_color_green"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_5"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_color_lila"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_6"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_color_pink"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_7"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_color_purple"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_8"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_color_yellow"
            android:orientation="vertical"
            android:padding="@dimen/medium_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_producto_9"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_display_p9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/texto_base"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_contador" />

        </LinearLayout>

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/bt_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Share" />


</LinearLayout>